# errorcall-eq-instance

./: README.markdown  errorcall-eq-instance.cabal
src/Control/Exception/ErrorCall/: EqInstance.hs
test/Control/Exception/ErrorCall/: EqInstanceSpec.hs
