name:             errorcall-eq-instance
version:          0.0.0
category:         Control
synopsis:         An orphan Eq instance for ErrorCall
description:      An orphan Eq instance for ErrorCall
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Control.Exception.ErrorCall.EqInstance
  build-depends:
      base    == 4.*

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , errorcall-eq-instance
    , QuickCheck
    , hspec >= 1.5
